gcc/testsuite/algol68/compile/error-string-break-5.a68
begin puts ("hello '(u0010u0020) world") # { dg-error "" }  #
end
